Adds content for course wrap up page.

--- a/docs/develop/node/node-crash-course/coursewrapup/index-coursewrapup.mdx
+++ b/docs/develop/node/node-crash-course/coursewrapup/index-coursewrapup.mdx
@@ -11,16 +11,10 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 <iframe width="560" height="315" src="https://www.youtube.com/embed/CgsglxiuSGc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
-TODO content.
+Thanks for taking the time to complete this course.  We hope that you found it useful and that you've learned a few things about using Redis as a data store and as a cache in your Node.js applications.
 
-## TODO Subheader
+Don't forget that the application [source code is available on GitHub](https://github.com/redislabs-training/node-js-crash-course/) for you to browse and use in your own projects.
 
-TODO content.
+Stay in touch! We'd love to hear from you and see what you build with Redis.  Why not [join us on Discord](https://discord.gg/redis) and [subscribe to our YouTube channel](https://youtube.com/redislabs) where we publish new videos regularly.
 
-### TODO Another Subheader
-
-TODO content.
-
-### Further References
-
-TODO content.
+Finally, if you'd like to continue your learning journey, check out [Redis University](https://university.redislabs.com) for free, self-paced online courses.
