--- a/docs/explore/redisinsight/redisgraph/index-redisgraph.mdx
+++ b/docs/explore/redisinsight/redisgraph/index-redisgraph.mdx
@@ -13,7 +13,7 @@ import RedisCard from '@site/src/theme/RedisCard';
 
 If you’re a Redis user who prefers to use a Graphical User Interface(GUI) for graph queries, then RedisInsight is a right tool for you. It’s 100% free pure desktop Redis GUI that provides easy-to-use browser tools to query, visualize and interactively manipulate graphs. You can add new graphs, run queries and explore the results over the GUI tool.
 
-RedisInsight supports RedisGraph and allows you to:
+RedisInsight supports [RedisGraph](https://oss.redislabs.com/redisgraph/) and allows you to:
 
 
 *   Build and execute queries
@@ -275,6 +275,7 @@ GRAPH.QUERY GOT_DEMO "MATCH (w:writer)-[wrote]->(b:book) return w,b"
 
 ## Additional Resources
 
+- [RedisGraph Project](https://oss.redislabs.com/redisgraph/)
 - [Slowlog Configuration using RedisInsight](/explore/redisinsight/slowlog)
 - [Memory Analysis using RedisInsight](/explore/redisinsight/memoryanalyzer)
 - [Visualize Redis database keys using RedisInsight Browser Tool](/explore/redisinsight/browser)
