--- a/docs/explore/redisinsight/redisgears/index-redisgears.mdx
+++ b/docs/explore/redisinsight/redisgears/index-redisgears.mdx
@@ -13,7 +13,7 @@ import RedisCard from '@site/src/theme/RedisCard';
 
 RedisInsight has built-in support for Redis Modules like RedisJSON, RediSearch, RedisGraph, Streams, RedisTimeSeries, and RedisGears. RedisGears enables reactive programming at the database level. It's like using lambda functions, but with a dramatically lower latency, and with much less encoding/decoding overhead. 
 
-Support for RedisGears was first introduced in RedisInsight v1.5.0. RedisInsights allows you:
+Support for [RedisGears](https://oss.redislabs.com/redisgears/) was first introduced in RedisInsight v1.5.0. RedisInsights allows you:
 
 
 
@@ -113,6 +113,7 @@ GB('KeysOnlyReader').map(lambda x: execute('hget', x, 'genres')).flatmap(lambda 
 
 ## Additional References
 
+- [RedisGears Project](https://oss.redislabs.com/redisgears/)
 - [RedisGears Tutorials](/howtos/redisgears)
 - [How to build a Fraud Detection System using RedisGears and RedisBloom](/howtos/frauddetection)
 - [Building a Pipeline for Natural Language Processing using RedisGears](/howtos/nlp)
