--- a/docs/explore/redisinsight/redisearch/index-redisearch.mdx
+++ b/docs/explore/redisinsight/redisearch/index-redisearch.mdx
@@ -11,7 +11,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 import RedisCard from '@site/src/theme/RedisCard';
 
 
-A full-featured pure desktop GUI client, RedisInsight supports RediSearch. RediSearch  is a powerful indexing, querying, and full-text search engine for Redis. It is one of the most mature and feature-rich Redis modules.With RedisInsight, the below functionalities are possible
+A full-featured pure desktop GUI client, RedisInsight supports RediSearch. [RediSearch](https://oss.redislabs.com/redisearch/)  is a powerful indexing, querying, and full-text search engine for Redis. It is one of the most mature and feature-rich Redis modules.With RedisInsight, the below functionalities are possible
 
 
 
@@ -436,6 +436,7 @@ The FT.SEARCH syntax has two ways to query numeric fields:
 
 ### Additional Links
 
+- [RediSearch Project](https://oss.redislabs.com/redisearch/)
 - [RediSearch Tutorial](/howtos/redisearch)
 - [Getting Started with Movie Database](/howtos/moviesdatabase/getting-started)
 - [Slowlog Configuration using RedisInsight](/explore/redisinsight/slowlog)
