--- a/docs/explore/redisinsight/redistimeseries/index-redistimeseries.mdx
+++ b/docs/explore/redisinsight/redistimeseries/index-redistimeseries.mdx
@@ -13,7 +13,7 @@ import RedisCard from '@site/src/theme/RedisCard';
 
 If you want to add a time series data structure to your Redis database, check out RedisTimeSeries browser tool that comes with RedisInsight. 
 
-RedisTimeseries is a Redis module developed by Redis Labs to enhance your experience managing time-series data with Redis. It simplifies the use of Redis for time-series use cases such as internet of things (IoT) data, stock prices, and telemetry. With RedisTimeSeries, you can ingest and query millions of samples and events at the speed of Redis. Advanced tooling such as downsampling and aggregation ensure a small memory footprint without impacting performance. Use a variety of queries for visualization and monitoring with built-in connectors to popular monitoring tools like Grafana, Prometheus, and Telegraf.
+[RedisTimeseries](https://oss.redislabs.com/redistimeseries/) is a Redis module developed by Redis Labs to enhance your experience managing time-series data with Redis. It simplifies the use of Redis for time-series use cases such as internet of things (IoT) data, stock prices, and telemetry. With RedisTimeSeries, you can ingest and query millions of samples and events at the speed of Redis. Advanced tooling such as downsampling and aggregation ensure a small memory footprint without impacting performance. Use a variety of queries for visualization and monitoring with built-in connectors to popular monitoring tools like Grafana, Prometheus, and Telegraf.
 
 With RedisInsight browser tool, you can perform the below sets of activities:
 
@@ -227,6 +227,7 @@ $ python3 dataloader.py
 
 ## Additional Resources
 
+- [RedisTimeSeries Project](https://oss.redislabs.com/redistimeseries/)
 - [RedisTimeSeries Tutorial](/howtos/redistimeseries)
 - [Analyze Your Redis commands using RedisInsight Profiler tool](explore/redisinsight/profiler)
 - [How to Manage Real-Time IoT Sensor Data in Redis](https://redislabs.com/blog/how-to-manage-real-time-iot-sensor-data-in-redis/)
