--- a/docs/explore/redisinsight/streams/index-streams.mdx
+++ b/docs/explore/redisinsight/streams/index-streams.mdx
@@ -12,7 +12,7 @@ import RedisCard from '@site/src/theme/RedisCard';
 
 
 
-Redis Streams is a Redis data type that represents a log, so you can add new information and message in an append-only mode 
+Redis Streams is a Redis data type that represents a log, so you can add new information and message in an append-only mode. 
 Redis Streams lets you build “Kafka-like” applications, which can:
 
 
