--- a/docs/explore/redisinsight/usinghelm/index-usinghelm.mdx
+++ b/docs/explore/redisinsight/usinghelm/index-usinghelm.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-usinghelm
-title: Installing RedisInsight using Helm Chart
-sidebar_label: Installing RedisInsight using Helm Chart
+title: Installing RedisInsight using Helm 
+sidebar_label: Installing RedisInsight using Helm
 slug: /explore/redisinsight/usinghelm
 ---
 
