--- a/docs/develop/ruby/index-ruby.mdx
+++ b/docs/develop/ruby/index-ruby.mdx
@@ -147,7 +147,7 @@ Below are few of these apps. [Click here to access the complete lists of apps](h
 
 ### Further References
 
-- [Redis Enterprise and Ruby](https://redislabs.com/lp/redis-ruby/)
+- [A Ruby client library for Redis](https://github.com/redis/redis-rb/)
 
 
 
