--- a/docs/develop/ruby/index-ruby.mdx
+++ b/docs/develop/ruby/index-ruby.mdx
@@ -148,6 +148,7 @@ Below are few of these apps. [Click here to access the complete lists of apps](h
 ### Further References
 
 - [A Ruby client library for Redis](https://github.com/redis/redis-rb/)
+- [Async::Redis - An asynchronous client for Redis including TLS](https://github.com/socketry/async-redis)
 
 
 
