--- a/docs/develop/php/index-php.mdx
+++ b/docs/develop/php/index-php.mdx
@@ -83,6 +83,8 @@ OK
 ### Further Reference:
 
 - [Getting Started with Redis & Php](https://github.com/redis-developer/redis-php-getting-started/)
+- [PHP extension for Redis based on Hiredis](https://github.com/nrk/phpiredis)
+- [Redis distributed locks in PHP](https://github.com/ronnylt/redlock-php)  
 
 
 
