--- a/docs/create/azure/terraform-simple/index-azure-terraform-simple.mdx
+++ b/docs/create/azure/terraform-simple/index-azure-terraform-simple.mdx
@@ -19,7 +19,7 @@ Login in Azure using the Azure CLI
 ```bash
 az login
 ```
->Login with a Service Principal will also work
+>Alternatively, you can also login via Service Principal 
 
 
 ### Step 2: Clone the repository
@@ -85,3 +85,5 @@ terraform output redisgeek_config
 </div>
 
 ### Next Step
+
+- [.Net and Redis](/develop/dotnet/)
