--- a/docs/create/azure/terraform-simple/index-azure-terraform-simple.mdx
+++ b/docs/create/azure/terraform-simple/index-azure-terraform-simple.mdx
@@ -9,7 +9,7 @@ This is a template to get started with the 'azurerm_redis_enterprise_cluster' re
 
 ### Prerequisite
 
-1.  [Terraform](https://terraform.io]) [CLI](https://terraform.io/downloads.html)
+1.  [Terraform CLI]((https://terraform.io]))
 2.  [Azure CLI](https://docs.microsoft.com/en-us/cli/azure/install-azure-cli)
 
 ### Step 1. Getting Started
