--- a/docs/create/azure/terraform-simple/index-azure-terraform-simple.mdx
+++ b/docs/create/azure/terraform-simple/index-azure-terraform-simple.mdx
@@ -8,7 +8,7 @@ slug: /create/azure/terraform-simple
 
 Azure Resource Manager(a.k.a AzureRM) is the deployment and management service for Azure. It provides a management layer that enables you to create, update, and delete resources in your Azure account. You use management features, like access control, locks, and tags, to secure and organize your resources after deployment.
 
-The "azurerm_redis_enterprise_database" is a resource that manages a Redis Enterprise Database. This is a template to get started with the 'azurerm_redis_enterprise_cluster' resource available in the 'azurerm' provider with Terraform.
+The "azurerm_redis_enterprise_cluster" is a resource that manages a Redis Enterprise cluster. This is a template to get started with the 'azurerm_redis_enterprise_cluster' resource available in the 'azurerm' provider with Terraform.
 
 ### Prerequisite
 
