--- a/docs/create/azure/terraform-simple/index-azure-terraform-simple.mdx
+++ b/docs/create/azure/terraform-simple/index-azure-terraform-simple.mdx
@@ -12,7 +12,7 @@ The "azurerm_redis_enterprise_cluster" is a resource that manages a Redis Enterp
 
 ### Prerequisite
 
-1.  [Terraform CLI](https://terraform.io])
+1.  [Terraform CLI](https://terraform.io)
 2.  [Azure CLI](https://docs.microsoft.com/en-us/cli/azure/install-azure-cli)
 
 ### Step 1. Getting Started
