--- a/docs/create/azure/terraform-simple/index-azure-terraform-simple.mdx
+++ b/docs/create/azure/terraform-simple/index-azure-terraform-simple.mdx
@@ -41,7 +41,7 @@ terraform init
 >The output should include: ```Terraform has been successfully initialized```
 
 
-### Step 4: Optionally, modify the variables
+### Step 4: Modify the variables(optional)
 
 This default variables are setup to deploy the smallest 'E10' instance into the 'East US' region.
 Changes can be made by updating the ```variables.tf``` file.
