--- a/docs/create/azure/index-azure.mdx
+++ b/docs/create/azure/index-azure.mdx
@@ -14,7 +14,7 @@ The following links provides you with the available options for create instances
  <div class="col">
      <RedisCard 
         title="Azure Portal" 
-        description="Redis on Azure Cache" 
+        description="Create Redis database on Azure Cache" 
         page="/create/azure/portal"
         />
  </div>
@@ -22,8 +22,8 @@ The following links provides you with the available options for create instances
 
  <div class="col">
     <RedisCard 
-        title="Azure Cache for Redis Enterprise" 
-        description="Redis Enterprise with Terraform" 
+        title="Azure Cache for Redis Enterprise via Terraform" 
+        description="Deploy Redis Enterprise on Azure Cloud using Terraform" 
         page="/create/azure/terraform-simple"
         />
  </div>
