--- a/docs/create/azure/index-azure.mdx
+++ b/docs/create/azure/index-azure.mdx
@@ -22,7 +22,7 @@ The following links provides you with the available options for create instances
 
  <div class="col">
     <RedisCard 
-        title="Azure Cache for Redis Enterprise via Terraform" 
+        title="Azure Cache for Redis Enterprise" 
         description="Deploy Redis Enterprise on Azure Cloud using Terraform" 
         page="/create/azure/terraform-simple"
         />
