--- a/docs/develop/php/index-php.mdx
+++ b/docs/develop/php/index-php.mdx
@@ -40,7 +40,7 @@ apt install pkg-php-tools
 ### Step 2. Install PhpRedis
  
 ```
-pecl install phpredis
+pecl install redis
 ```
 
 ### Step 3. Opening a Connection to Redis Using PhpRredis
