--- a/docs/explore/redismod/index-redismod.mdx
+++ b/docs/explore/redismod/index-redismod.mdx
@@ -25,6 +25,13 @@ This image is based on the official image of Redis from Docker. By default, the 
 - [RedisGears](https://redislabs.com/modules/redis-gears/): a dynamic execution framework
 
 
+:::important
+
+The latest redismod:preview Docker image hold RedisJSON 2.0 and RediSearch 2.2 Private Preview Release.
+
+```docker run -p 6379:6379 redislabs/redismod:preview```
+
+:::
 
 ### Step 1. Install Docker
 
