--- a/docs/explore/redismod/index-redismod.mdx
+++ b/docs/explore/redismod/index-redismod.mdx
@@ -27,9 +27,9 @@ This image is based on the official image of Redis from Docker. By default, the 
 
 :::important
 
-The latest redismod:preview Docker image hold RedisJSON 2.0 and RediSearch 2.2 Private Preview Release.
+The latest redismod:preview Docker image holds RedisJSON 2.0 and RediSearch 2.2 Private Preview Release.This Private Preview Releases delivers real-time document capabilities with active-active support. The ability to index, query, and use full-text search on JSON documents using RediSearch is the coolest new feature of this release. Try it out today -
 
-```docker run -p 6379:6379 redislabs/redismod:preview```
+docker run -p 6379:6379 redislabs/redismod:preview
 
 :::
 
