--- a/docs/create/azure/terraform-simple/index-azure-terraform-simple.mdx
+++ b/docs/create/azure/terraform-simple/index-azure-terraform-simple.mdx
@@ -6,6 +6,26 @@ slug: /create/azure/terraform-simple
 ---
 
 
+The Enterprise Tiers of Azure Cache for Redis is generally available as a native fully managed service on Microsoft Azure. This offering combines Azure’s global presence, flexibility, security, and compliance with Redis Enterprise’s unmatched availability, performance, and extended data structure functionality to create the best experience for enterprises. Enterprise features include: 
+
+- Open source Redis 6.0
+- Zone redundancy, with up to 99.99% availability
+- [Preview] Active geo-replication, with up to 99.999% availability
+- Redis on Flash (RoF)
+- [Preview]  Disk persistence with recovery 
+- Redis Enterprise modules:
+   - RediSearch 2.0
+   - RedisTimeSeries
+   - RedisBloom
+- Scaling
+   - Datasets up to 13TB 
+   - Up to 2M concurrent client connections 
+   - Over 1M ops/second
+- Security 
+   - Private Link support
+   - TLS connectivity 
+- Integrated billing and the ability to apply Azure-commitment spend
+
 Azure Resource Manager(a.k.a AzureRM) is the deployment and management service for Azure. It provides a management layer that enables you to create, update, and delete resources in your Azure account. You use management features, like access control, locks, and tags, to secure and organize your resources after deployment.
 
 The "azurerm_redis_enterprise_cluster" is a resource that manages a Redis Enterprise cluster. This is a template to get started with the 'azurerm_redis_enterprise_cluster' resource available in the 'azurerm' provider with Terraform.
