--- a/docs/create/azure/terraform-simple/index-azure-terraform-simple.mdx
+++ b/docs/create/azure/terraform-simple/index-azure-terraform-simple.mdx
@@ -8,15 +8,15 @@ slug: /create/azure/terraform-simple
 
 The Enterprise Tiers of Azure Cache for Redis is generally available as a native fully managed service on Microsoft Azure. This offering combines Azure’s global presence, flexibility, security, and compliance with Redis Enterprise’s unmatched availability, performance, and extended data structure functionality to create the best experience for enterprises. Enterprise features include: 
 
-- Open source Redis 6.0
-- Zone redundancy, with up to 99.99% availability
-- [Preview] Active geo-replication, with up to 99.999% availability
-- Redis on Flash (RoF)
-- [Preview]  Disk persistence with recovery 
+- [Open source Redis 6.0](https://redislabs.com/blog/diving-into-redis-6/)
+- [Zone redundancy, with up to 99.99% availability](https://docs.microsoft.com/en-us/azure/azure-cache-for-redis/cache-high-availability#zone-redundancy)
+- [Preview] [Active geo-replication, with up to 99.999% availability](https://redislabs.com/redis-enterprise/technology/active-active-geo-distribution/)
+- [Redis on Flash (RoF)](https://redislabs.com/redis-enterprise/technology/redis-on-flash/)
+- [Preview]  [Disk persistence with recovery](https://redislabs.com/redis-enterprise/technology/durable-redis-2/) 
 - Redis Enterprise modules:
-   - RediSearch 2.0
-   - RedisTimeSeries
-   - RedisBloom
+   - [RediSearch 2.0](https://redislabs.com/blog/redisearch-2-build-modern-applications-interactive-search/)
+   - [RedisTimeSeries](https://redislabs.com/modules/redis-timeseries/)
+   - [RedisBloom](https://redislabs.com/modules/redis-bloom/)
 - Scaling
    - Datasets up to 13TB 
    - Up to 2M concurrent client connections 
