--- a/docs/create/azure/terraform-simple/index-azure-terraform-simple.mdx
+++ b/docs/create/azure/terraform-simple/index-azure-terraform-simple.mdx
@@ -22,7 +22,7 @@ The Enterprise Tiers of Azure Cache for Redis is generally available as a native
    - Up to 2M concurrent client connections 
    - Over 1M ops/second
 - Security 
-   - Private Link support
+   - [Private Link support](https://docs.microsoft.com/en-us/azure/azure-cache-for-redis/cache-private-link)
    - TLS connectivity 
 - Integrated billing and the ability to apply Azure-commitment spend
 
