--- a/docs/explore/redismod/index-redismod.mdx
+++ b/docs/explore/redismod/index-redismod.mdx
@@ -129,6 +129,7 @@ To test drive rest of Redis modules, please visit the links mentioned under "Ref
 
 ### References
 
+ - [Indexing, Querying, and Full-Text Search of JSON Documents with Redis](https://redislabs.com/blog/index-and-query-json-docs-with-redis/)
  - [Redismod GITHUB repository](https://github.com/RedisLabsModules/redismod)
  - [Connecting to the database using RedisInsight](https://developer.redislabs.com/explore/redisinsight/)
  - [RedisJSON Tutorial](https://developer.redislabs.com/howtos/redisjson)
