--- a/docs/explore/redismod/index-redismod.mdx
+++ b/docs/explore/redismod/index-redismod.mdx
@@ -31,6 +31,7 @@ The latest redismod:preview Docker image holds RedisJSON 2.0 and RediSearch 2.2 
 
 docker run -p 6379:6379 redislabs/redismod:preview
 
+Refer to the link provided in the reference section for further details.
 :::
 
 ### Step 1. Install Docker
