--- a/docs/create/azure/terraform-simple/index-azure-terraform-simple.mdx
+++ b/docs/create/azure/terraform-simple/index-azure-terraform-simple.mdx
@@ -10,9 +10,9 @@ The Enterprise Tiers of Azure Cache for Redis is generally available as a native
 
 - [Open source Redis 6.0](https://redislabs.com/blog/diving-into-redis-6/)
 - [Zone redundancy, with up to 99.99% availability](https://docs.microsoft.com/en-us/azure/azure-cache-for-redis/cache-high-availability#zone-redundancy)
-- [Preview] [Active geo-replication, with up to 99.999% availability](https://redislabs.com/redis-enterprise/technology/active-active-geo-distribution/)
+- [Active geo-replication, with up to 99.999% availability](https://redislabs.com/redis-enterprise/technology/active-active-geo-distribution/) - Preview
 - [Redis on Flash (RoF)](https://redislabs.com/redis-enterprise/technology/redis-on-flash/)
-- [Preview]  [Disk persistence with recovery](https://redislabs.com/redis-enterprise/technology/durable-redis-2/) 
+- [Disk persistence with recovery](https://redislabs.com/redis-enterprise/technology/durable-redis-2/) - Preview
 - Redis Enterprise modules:
    - [RediSearch 2.0](https://redislabs.com/blog/redisearch-2-build-modern-applications-interactive-search/)
    - [RedisTimeSeries](https://redislabs.com/modules/redis-timeseries/)
