--- a/docs/create/azure/terraform-private-endpoint/index-terraform-private-endpoint.mdx
+++ b/docs/create/azure/terraform-private-endpoint/index-terraform-private-endpoint.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-azure-terraform-private-endpoint
 title: Azure Cache for Redis Enterprise using Terraform with Private Link
-sidebar_label: Private Link Terraform
+sidebar_label: Azure Cache for Redis Enterprise using Terraform with Private Link
 slug: /create/azure/terraform-private-endpoint
 ---
 
