add private endpoint to overview page

--- a/docs/create/azure/index-azure.mdx
+++ b/docs/create/azure/index-azure.mdx
@@ -10,7 +10,6 @@ import RedisCard from '@site/src/theme/RedisCard';
 The following links provides you with the available options for create instances of Azure Cache for Redis
 
 <div class="row">
-
  <div class="col">
      <RedisCard 
         title="Azure Portal" 
@@ -18,8 +17,6 @@ The following links provides you with the available options for create instances
         page="/create/azure/portal"
         />
  </div>
-
-
  <div class="col">
     <RedisCard 
         title="Azure Cache for Redis Enterprise via Terraform" 
@@ -27,4 +24,14 @@ The following links provides you with the available options for create instances
         page="/create/azure/terraform-simple"
         />
  </div>
+</div>
+
+<div class="row">
+    <div class="col">
+        <RedisCard
+            title="Terraform Azure Cache for Redis Enterprise with Private Endpoint"
+            description="Restrict private endpoint access to specific subnets"
+            page="/create/azure/terraform-private-endpoint"
+        />
+    </div>
 </div>
